Re-generate codebase using 1.0.0 pre-release spec
