# server/openapi_server/models/note.py
@@ -6,8 +6,10 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model_ import Model
+import re
 from openapi_server import util
 
+import re  # noqa: E501
 
 class Note(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -15,11 +17,11 @@ class Note(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, id=None, text=None, note_type=None, patient_id=None):  # noqa: E501
+    def __init__(self, identifier=None, text=None, note_type=None, patient_id=None):  # noqa: E501
         """Note - a model defined in OpenAPI
 
-        :param id: The id of this Note.  # noqa: E501
-        :type id: str
+        :param identifier: The identifier of this Note.  # noqa: E501
+        :type identifier: str
         :param text: The text of this Note.  # noqa: E501
         :type text: str
         :param note_type: The note_type of this Note.  # noqa: E501
@@ -28,20 +30,20 @@ class Note(Model):
         :type patient_id: str
         """
         self.openapi_types = {
-            'id': str,
+            'identifier': str,
             'text': str,
             'note_type': str,
             'patient_id': str
         }
 
         self.attribute_map = {
-            'id': 'id',
+            'identifier': 'identifier',
             'text': 'text',
             'note_type': 'noteType',
             'patient_id': 'patientId'
         }
 
-        self._id = id
+        self._identifier = identifier
         self._text = text
         self._note_type = note_type
         self._patient_id = patient_id
@@ -58,27 +60,35 @@ class Note(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def id(self):
-        """Gets the id of this Note.
+    def identifier(self):
+        """Gets the identifier of this Note.
 
-        ID of the clinical note  # noqa: E501
+        The ID of the clinical note  # noqa: E501
 
-        :return: The id of this Note.
+        :return: The identifier of this Note.
         :rtype: str
         """
-        return self._id
+        return self._identifier
 
-    @id.setter
-    def id(self, id):
-        """Sets the id of this Note.
+    @identifier.setter
+    def identifier(self, identifier):
+        """Sets the identifier of this Note.
 
-        ID of the clinical note  # noqa: E501
+        The ID of the clinical note  # noqa: E501
 
-        :param id: The id of this Note.
-        :type id: str
+        :param identifier: The identifier of this Note.
+        :type identifier: str
         """
+        if identifier is None:
+            raise ValueError("Invalid value for `identifier`, must not be `None`")  # noqa: E501
+        if identifier is not None and len(identifier) > 60:
+            raise ValueError("Invalid value for `identifier`, length must be less than or equal to `60`")  # noqa: E501
+        if identifier is not None and len(identifier) < 3:
+            raise ValueError("Invalid value for `identifier`, length must be greater than or equal to `3`")  # noqa: E501
+        if identifier is not None and not re.search(r'^[a-z0-9]+(?:-[a-z0-9]+)*$', identifier):  # noqa: E501
+            raise ValueError("Invalid value for `identifier`, must be a follow pattern or equal to `/^[a-z0-9]+(?:-[a-z0-9]+)*$/`")  # noqa: E501
 
-        self._id = id
+        self._identifier = identifier
 
     @property
     def text(self):
@@ -134,7 +144,7 @@ class Note(Model):
     def patient_id(self):
         """Gets the patient_id of this Note.
 
-        ID of the FHIR patient  # noqa: E501
+        The ID of the FHIR patient  # noqa: E501
 
         :return: The patient_id of this Note.
         :rtype: str
@@ -145,10 +155,18 @@ class Note(Model):
     def patient_id(self, patient_id):
         """Sets the patient_id of this Note.
 
-        ID of the FHIR patient  # noqa: E501
+        The ID of the FHIR patient  # noqa: E501
 
         :param patient_id: The patient_id of this Note.
         :type patient_id: str
         """
+        if patient_id is None:
+            raise ValueError("Invalid value for `patient_id`, must not be `None`")  # noqa: E501
+        if patient_id is not None and len(patient_id) > 60:
+            raise ValueError("Invalid value for `patient_id`, length must be less than or equal to `60`")  # noqa: E501
+        if patient_id is not None and len(patient_id) < 3:
+            raise ValueError("Invalid value for `patient_id`, length must be greater than or equal to `3`")  # noqa: E501
+        if patient_id is not None and not re.search(r'^[a-z0-9]+(?:-[a-z0-9]+)*$', patient_id):  # noqa: E501
+            raise ValueError("Invalid value for `patient_id`, must be a follow pattern or equal to `/^[a-z0-9]+(?:-[a-z0-9]+)*$/`")  # noqa: E501
 
         self._patient_id = patient_id
