# server/openapi_server/models/tool.py
@@ -19,7 +19,7 @@ class Tool(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, name=None, version=None, license=None, repository=None, description=None, author=None, author_email=None, url=None, tool_type=None):  # noqa: E501
+    def __init__(self, name=None, version=None, license=None, repository=None, description=None, author=None, author_email=None, url=None, tool_type=None, tool_api_version=None):  # noqa: E501
         """Tool - a model defined in OpenAPI
 
         :param name: The name of this Tool.  # noqa: E501
@@ -40,6 +40,8 @@ class Tool(Model):
         :type url: str
         :param tool_type: The tool_type of this Tool.  # noqa: E501
         :type tool_type: str
+        :param tool_api_version: The tool_api_version of this Tool.  # noqa: E501
+        :type tool_api_version: str
         """
         self.openapi_types = {
             'name': str,
@@ -50,7 +52,8 @@ class Tool(Model):
             'author': str,
             'author_email': str,
             'url': str,
-            'tool_type': str
+            'tool_type': str,
+            'tool_api_version': str
         }
 
         self.attribute_map = {
@@ -62,7 +65,8 @@ class Tool(Model):
             'author': 'author',
             'author_email': 'authorEmail',
             'url': 'url',
-            'tool_type': 'toolType'
+            'tool_type': 'toolType',
+            'tool_api_version': 'toolApiVersion'
         }
 
         self._name = name
@@ -74,6 +78,7 @@ class Tool(Model):
         self._author_email = author_email
         self._url = url
         self._tool_type = tool_type
+        self._tool_api_version = tool_api_version
 
     @classmethod
     def from_dict(cls, dikt) -> 'Tool':
@@ -300,7 +305,7 @@ class Tool(Model):
     def tool_type(self):
         """Gets the tool_type of this Tool.
 
-        Type of this tool  # noqa: E501
+        The type of this tool  # noqa: E501
 
         :return: The tool_type of this Tool.
         :rtype: str
@@ -311,12 +316,47 @@ class Tool(Model):
     def tool_type(self, tool_type):
         """Sets the tool_type of this Tool.
 
-        Type of this tool  # noqa: E501
+        The type of this tool  # noqa: E501
 
         :param tool_type: The tool_type of this Tool.
         :type tool_type: str
         """
         if tool_type is None:
             raise ValueError("Invalid value for `tool_type`, must not be `None`")  # noqa: E501
+        if tool_type is not None and len(tool_type) > 60:
+            raise ValueError("Invalid value for `tool_type`, length must be less than or equal to `60`")  # noqa: E501
+        if tool_type is not None and len(tool_type) < 3:
+            raise ValueError("Invalid value for `tool_type`, length must be greater than or equal to `3`")  # noqa: E501
+        if tool_type is not None and not re.search(r'^[a-z0-9]+(?:-[a-z0-9]+)*(:)[a-z0-9]+(?:-[a-z0-9]+)*$', tool_type):  # noqa: E501
+            raise ValueError("Invalid value for `tool_type`, must be a follow pattern or equal to `/^[a-z0-9]+(?:-[a-z0-9]+)*(:)[a-z0-9]+(?:-[a-z0-9]+)*$/`")  # noqa: E501
 
         self._tool_type = tool_type
+
+    @property
+    def tool_api_version(self):
+        """Gets the tool_api_version of this Tool.
+
+        The version of the tool OpenAPI specification  # noqa: E501
+
+        :return: The tool_api_version of this Tool.
+        :rtype: str
+        """
+        return self._tool_api_version
+
+    @tool_api_version.setter
+    def tool_api_version(self, tool_api_version):
+        """Sets the tool_api_version of this Tool.
+
+        The version of the tool OpenAPI specification  # noqa: E501
+
+        :param tool_api_version: The tool_api_version of this Tool.
+        :type tool_api_version: str
+        """
+        if tool_api_version is None:
+            raise ValueError("Invalid value for `tool_api_version`, must not be `None`")  # noqa: E501
+        if tool_api_version is not None and len(tool_api_version) < 1:
+            raise ValueError("Invalid value for `tool_api_version`, length must be greater than or equal to `1`")  # noqa: E501
+        if tool_api_version is not None and not re.search(r'^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$', tool_api_version):  # noqa: E501
+            raise ValueError("Invalid value for `tool_api_version`, must be a follow pattern or equal to `/^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$/`")  # noqa: E501
+
+        self._tool_api_version = tool_api_version
